[info A] Welcome slides fix

--- a/00-welcome-slides/welcome.lyx
+++ b/00-welcome-slides/welcome.lyx
@@ -415,7 +415,7 @@ per un totale di 40 ore
 \end_layout
 
 \begin_layout Itemize
-salvo variazioni impreviste
+salvo sporadiche variazioni
 \end_layout
 
 \end_deeper
