[info A] Boolean Algebra - fix

--- a/01-boolean-algebra/01-boolean-algebra.lyx
+++ b/01-boolean-algebra/01-boolean-algebra.lyx
@@ -4464,6 +4464,13 @@ Fine
 
 \begin_deeper
 \begin_layout Standard
+Queste slides contengono elementi tratti da materiale di Gerardo Pelosi
+ redatto per il corso di Fondamenti di Informatica per Ingegneria dell'Automazio
+ne a.a.
+ 2014/15.
+\end_layout
+
+\begin_layout Standard
 \align center
 
 \size largest
