--- a/01-boolean-algebra/01-boolean-algebra.lyx
+++ b/01-boolean-algebra/01-boolean-algebra.lyx
@@ -4464,10 +4464,13 @@ Fine
 
 \begin_deeper
 \begin_layout Standard
+
+\size footnotesize
 Queste slides contengono elementi tratti da materiale di Gerardo Pelosi
  redatto per il corso di Fondamenti di Informatica per Ingegneria dell'Automazio
 ne a.a.
  2014/15.
+ 
 \end_layout
 
 \begin_layout Standard
@@ -4486,9 +4489,15 @@ Grazie per l'attenzione!
 
 \begin_layout Standard
 \align center
-\begin_inset Graphics
-	filename by-sa.svg
-	height 0.9cm
+Licenza Beerware
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+
+\size normal
+http://people.freebsd.org/~phk/
+\end_layout
 
 \end_inset
 
@@ -4499,7 +4508,10 @@ Grazie per l'attenzione!
 \align center
 
 \size footnotesize
-Queste slides sono licenziate Creative Commons Attribution-ShareAlike 4.0
+Queste slides sono opera di Stefano Cherubin.
+ Mantenendo questa nota, puoi fare quello che vuoi con quest'opera.
+ Se ci dovessimo incontrare e tu ritenessi che quest'opera lo valga, in
+ cambio puoi offrirmi una birra.
 \end_layout
 
 \end_deeper
